[gd_scene load_steps=12 format=3 uid="uid://bxoo2n1e162h4"]

[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="1_gh1b7"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_jer4m"]
[ext_resource type="PackedScene" uid="uid://bq86r4yll8po" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_fullglove_low.tscn" id="1_xgdfo"]
[ext_resource type="PackedScene" uid="uid://xqimcf20s2jp" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_fullglove_low.tscn" id="2_xl5dg"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="4_uqhw3"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="4_yd4g1"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="5_7b0kk"]
[ext_resource type="PackedScene" uid="uid://c2ihhvt1bny7n" path="res://Scenes/wall_menu_v.tscn" id="6_jcfxa"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/overrides/ground_physics_settings.gd" id="7_xf0lu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_m8ey8"]
size = Vector3(0.05, 0.12, 0.16)

[sub_resource type="Resource" id="Resource_0td0i"]
script = ExtResource("7_xf0lu")
flags = 0
move_drag = 5.0
move_traction = 30.0
stop_on_slope = true
move_max_slope = 45.0
jump_max_slope = 45.0
jump_velocity = 3.0
bounciness = 0.0
bounce_threshold = 1.0

[node name="Player" type="XROrigin3D"]
current = true
script = ExtResource("1_jer4m")

[node name="XRCamera3D" type="XRCamera3D" parent="."]

[node name="LeftHand" type="XRController3D" parent="."]
tracker = &"left_hand"

[node name="FunctionPickup" parent="LeftHand" instance=ExtResource("5_7b0kk")]
grab_distance = 1.0
grab_collision_mask = 327688
ranged_collision_mask = 8

[node name="FunctionPointer" parent="LeftHand" instance=ExtResource("4_yd4g1")]
show_laser = 2
laser_length = 1
show_target = true
collision_mask = 5246976
collide_with_areas = true

[node name="MovementDirect" parent="LeftHand" instance=ExtResource("1_gh1b7")]
strafe = true

[node name="LeftHand" parent="LeftHand" instance=ExtResource("1_xgdfo")]

[node name="LeftArea" type="Area3D" parent="LeftHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.025, -0.05, 0.08)
collision_layer = 2048
collision_mask = 1024

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftHand/LeftArea"]
shape = SubResource("BoxShape3D_m8ey8")

[node name="RightHand" type="XRController3D" parent="."]
tracker = &"right_hand"

[node name="wall_menu_v" parent="RightHand" instance=ExtResource("6_jcfxa")]
transform = Transform3D(4.37114e-08, -8.74228e-08, 1, -8.74228e-08, 1, 8.74228e-08, -1, -8.74228e-08, 4.37114e-08, 0.1, 0, 0)

[node name="FunctionPickup" parent="RightHand" instance=ExtResource("5_7b0kk")]
grab_distance = 1.0
grab_collision_mask = 327688
ranged_collision_mask = 8

[node name="RightHand" parent="RightHand" instance=ExtResource("2_xl5dg")]

[node name="RightArea" type="Area3D" parent="RightHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.025, -0.05, 0.08)
collision_layer = 2048
collision_mask = 1024

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightHand/RightArea"]
shape = SubResource("BoxShape3D_m8ey8")

[node name="PlayerBody" parent="." instance=ExtResource("4_uqhw3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000230789, 0.000463247, 9.74685e-05)
collision_layer = 524292
collision_mask = 2
physics = SubResource("Resource_0td0i")

[connection signal="button_pressed" from="LeftHand" to="." method="_on_left_hand_button_pressed"]
[connection signal="button_pressed" from="RightHand" to="." method="_on_right_hand_button_pressed"]
[connection signal="area_entered" from="RightHand/RightArea" to="." method="_on_area_3d_2_area_entered"]
[connection signal="area_exited" from="RightHand/RightArea" to="." method="_on_area_3d_2_area_exited"]
